--- a/templates/p_7_integration.html
+++ b/templates/p_7_integration.html
@@ -74,16 +74,19 @@
         //------------------------------------------------
 
 
-        var url = "ws://" + document.domain + ":" + location.port + "/ws";
-        //var ws = new WebSocket("ws://104.248.26.149:5000/ws");
-        var ws = new WebSocket(url);
+        //var url = "ws://" + document.domain + ":" + location.port + "/ws";
+        var ws = new WebSocket("ws://104.248.26.149:5000/ws");
+        //var ws = new WebSocket(url);
         var localDocument = public_newDocument();
+
+        var sendingDelay = 100;
+        var flag = false;
 
         function bench(tag, fn) {
             var b = new Date();
             var v = fn();
             var e = new Date();
-            console.log("** " + tag + " took " + (e - b) + "ms");
+            //console.log("** " + tag + " took " + (e - b) + "ms");
             return v;
         }
 
@@ -97,8 +100,35 @@
 
         }
 
+        function syncWithText() {
+            var newContent = $("#integration-textarea").val();
+            var oldContent = bench("getContent", () => public_getContent(localDocument));
+            
+            var changes = bench("editList", () => editList(oldContent, newContent));
+            for (var i = 0; i < changes.length; i++) {
+                if (changes[i].type == "I") {
+                    var position = bench("insertAfter", () => public_insertAfter(localDocument, changes[i].pos - 1, changes[i].symbol));
+                    changesDocument.d1.push([position, changes[i].symbol]);
+                    changesDocument.d1s.add(to_str(position));
+                } else {
+                    var position = bench("remove", () => public_remove(localDocument, changes[i].pos));
+                    changesDocument.d2.add(to_str(position));
+                }
+            }
+            if (!flag) {
+                flag = true;
+                
+                setTimeout(function() { 
+                    bench("send", () => ws.send(public_serializeState(changesDocument)));
+                    changesDocument = public_newDocument();
+                    flag = false;
+                }, 500);
+            }
+        }
+
         // Функция-обработчик при получении нового сообщения.
         ws.onmessage = function (event) {
+            syncWithText();
             if (JSON.parse(event.data) == "help") {
                 bench("send", function () {
                     ws.send(public_serializeState(localDocument));
@@ -123,25 +153,13 @@
         // Функция-обработчик при установке соединения.
         ws.onopen = function (event) {
             ws.send(JSON.stringify("help"));
+            lastSending = new Date();
         };
 
         var counter = 0;
+        var changesDocument = public_newDocument();
 
-        $("#integration-textarea").on("input", function () {
-            console.log(counter);
-            counter++;
-            var newContent = $("#integration-textarea").val();
-            var oldContent = bench("getContent", () => public_getContent(localDocument));
-            var changes = bench("editList", () => editList(oldContent, newContent));
-            for (var i = 0; i < changes.length; i++) {
-                if (changes[i].type == "I") {
-                    bench("insertAfter", () => public_insertAfter(localDocument, changes[i].pos - 1, changes[i].symbol));
-                } else {
-                    bench("remove", () => public_remove(localDocument, changes[i].pos));
-                }
-            }
-            bench("send", () => ws.send(public_serializeState(localDocument)));
-        });
+        $("#integration-textarea").on("input", syncWithText());
 
     </script>
 </body>
